--- a/index.html
+++ b/index.html
@@ -53,41 +53,15 @@
 				<div id="app1" class="app animated fadeInRight">
 					<ul>
 						<li>
-							<a href="#" target="_blank"><img class="shake" src="img/png/AppStore.png" /><strong>我的博客</strong></a>
+							<a href="http://us-la-cn2-1.natfrp.cloud:18823/Dashboard" target="_blank"><img class="shake" src="img/png/Settings.png" /><strong>设置</strong></a>
 						</li>
 						<li>
-							<a href="#" target="_blank"><img class="shake" src="img/png/iCloud-Drive.png" /><strong>爱快云</strong></a>
+							<a href="http://us-la-cn2-1.natfrp.cloud:53563/" target="_blank"><img class="shake" src="img/png/iCloud-Drive.png" /><strong>File Browser</strong></a>
 						</li>
 						<li>
-							<a href="#" target="_blank"><img class="shake" src="img/png/Music.png" /><strong>音乐</strong></a>
+							<a href="http://us-or-cera-1.natfrp.cloud:24829/" target="_blank"><img class="shake" src="img/png/Transmission.png" /><strong>Transmission</strong></a>
 						</li>
-						<li>
-							<a href="#" target="_blank"><img class="shake" src="img/png/Photos.png" /><strong>相册</strong></a>
-						</li>
-						<li>
-							<a href="#" target="_blank"><img class="shake" src="img/png/Videos.png" /><strong>视频</strong></a>
-						</li>
-						<li>
-							<a href="#" target="_blank"><img class="shake" src="img/png/Thunder.png" /><strong>迅雷远程</strong></a>
-						</li>
-						<li>
-							<a href="#" target="_blank"><img class="shake" src="img/png/Downloads.png" /><strong>下载管理</strong></a>
-						</li>
-						<li>
-							<a href="#" target="_blank"><img class="shake" src="img/png/Transmission.png" /><strong>BT</strong></a>
-						</li>
-						<li>
-							<a href="#" target="_blank"><img class="shake" src="img/png/Settings.png" /><strong>设置</strong></a>
-						</li>
-						<li>
-							<a href="#" target="_blank"><img class="shake" src="img/png/FontExplorer-X.png" /><strong>管理文件</strong></a>
-						</li>
-						<li>
-							<a href="#" target="_blank"><img class="shake" src="img/png/Podcats.png" /><strong>管理路由器</strong></a>
-						</li>
-						<li>
-							<a href="#" target="_blank"><img class="shake" src="img/png/FaceTime.png" /><strong>监控系统</strong></a>
-						</li>
+						
 					</ul>
 				</div>
 				<div style="clear: both;"></div>
